// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News ticker Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-news-ticker"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
          </li>
        </ul>
      </div>
    </div>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--m ecl-news-ticker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#information"
      />
    </svg>
    <div
      class="ecl-news-ticker__counter"
    >
      <span
        class="ecl-news-ticker__counter--current"
      >
        1
      </span>
       of 6
  
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <button
        aria-controls="news-ticker-example-content"
        class="ecl-button ecl-button--primary ecl-news-ticker__prev"
        data-ecl-news-ticker-prev=""
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
        <span
          class="ecl-u-sr-only"
        >
          Previous news
        </span>
      </button>
      <button
        class="ecl-button ecl-button--primary ecl-news-ticker__toggle"
        data-ecl-news-ticker-toggle=""
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#play"
            />
          </svg>
        </span>
        <span
          class="ecl-u-sr-only"
        >
          News ticker auto play
        </span>
      </button>
      <button
        aria-controls="news-ticker-example-content"
        class="ecl-button ecl-button--primary ecl-news-ticker__prev"
        data-ecl-news-ticker-next=""
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
        <span
          class="ecl-u-sr-only"
        >
          Next news
        </span>
      </button>
    </div>
  </div>
</jest>
`;

exports[`News ticker Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-news-ticker"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
          </li>
        </ul>
      </div>
    </div>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--m ecl-news-ticker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#information"
      />
    </svg>
    <div
      class="ecl-news-ticker__counter"
    >
      <span
        class="ecl-news-ticker__counter--current"
      >
        1
      </span>
       of 6
  
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <button
        aria-controls="news-ticker-example-content"
        class="ecl-button ecl-button--primary ecl-news-ticker__prev"
        data-ecl-news-ticker-prev=""
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
        <span
          class="ecl-u-sr-only"
        >
          Previous news
        </span>
      </button>
      <button
        class="ecl-button ecl-button--primary ecl-news-ticker__toggle"
        data-ecl-news-ticker-toggle=""
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#play"
            />
          </svg>
        </span>
        <span
          class="ecl-u-sr-only"
        >
          News ticker auto play
        </span>
      </button>
      <button
        aria-controls="news-ticker-example-content"
        class="ecl-button ecl-button--primary ecl-news-ticker__prev"
        data-ecl-news-ticker-next=""
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
        <span
          class="ecl-u-sr-only"
        >
          Next news
        </span>
      </button>
    </div>
  </div>
</jest>
`;

exports[`News ticker Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-news-ticker custom-class custom-class--test"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
              tabindex="-1"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
          </li>
        </ul>
      </div>
    </div>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--m ecl-news-ticker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#information"
      />
    </svg>
    <div
      class="ecl-news-ticker__counter"
    >
      <span
        class="ecl-news-ticker__counter--current"
      >
        1
      </span>
       of 6
  
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <button
        aria-controls="news-ticker-example-content"
        class="ecl-button ecl-button--primary ecl-news-ticker__prev"
        data-ecl-news-ticker-prev=""
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
        <span
          class="ecl-u-sr-only"
        >
          Previous news
        </span>
      </button>
      <button
        class="ecl-button ecl-button--primary ecl-news-ticker__toggle"
        data-ecl-news-ticker-toggle=""
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#play"
            />
          </svg>
        </span>
        <span
          class="ecl-u-sr-only"
        >
          News ticker auto play
        </span>
      </button>
      <button
        aria-controls="news-ticker-example-content"
        class="ecl-button ecl-button--primary ecl-news-ticker__prev"
        data-ecl-news-ticker-next=""
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
        <span
          class="ecl-u-sr-only"
        >
          Next news
        </span>
      </button>
    </div>
  </div>
</jest>
`;
